--- a/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
+++ b/Esterni/Definizione_di_prodotto/tex/componenti-FE.tex
@@ -34,6 +34,12 @@ Questo package descrive le classi che contengono delle collection (secondo la vi
 \subsection{\nogloxy{swedesigner::client::model}}
 \label{\nogloxy{swedesigner::client::model}}
 \subsubsection{Informazioni generali}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/model_pkg.png}}
+\caption{\nogloxy{swedesigner::client::model}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Questo package contiene i modelli di dati usati dal client per rappresentare l'informazione manipolata dall'utente.
@@ -49,12 +55,6 @@ Questo package racchiude le classi che definiscono i principali comandi dell'app
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::client::model::NewCellFactory}}
 \label{\nogloxy{swedesigner::client::model::NewCellFactory}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/newcellfactory.png}}
-\caption{\nogloxy{swedesigner::client::model::NewCellFactory}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe si occupa di fornire un'istanza di una cella del tipo richiesto da \texttt{NewCellModel}. 
@@ -141,12 +141,6 @@ questa classe si occupa di fornire un'istanza di una cella del tipo richiesto da
 
 \subsubsubsection{\nogloxy{swedesigner::client::model::ProjectCommand}}
 \label{\nogloxy{swedesigner::client::model::ProjectCommand}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/projectcommand.png}}
-\caption{\nogloxy{swedesigner::client::model::ProjectCommand}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa interfaccia descrive la struttura di un comando che viene chiamato da \texttt{AppView} quando l'utente decide di creare un nuovo progetto, di caricarne uno esistente, di salvarlo o di generare il codice dal diagramma. Il pattern realizzato è il pattern Command.
@@ -277,6 +271,12 @@ questa classe rappresenta l'area di disegno principale dell'applicazione, che ne
 \subsection{\nogloxy{swedesigner::client::model::celltypes}}
 \label{\nogloxy{swedesigner::client::model::celltypes}}
 \subsubsection{Informazioni generali}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/celltypes_pkg.png}}
+\caption{\nogloxy{swedesigner::client::celltypes}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Questo package contiene la definizione del modello degli elementi grafici dell'applicazione (e.g. diagrammi delle classi, blocchi condizionali\dots). 
@@ -292,12 +292,6 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::HxStereotype}}
 \label{\nogloxy{swedesigner::client::model::celltypes::HxStereotype}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxstereotype.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::HxStereotype}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta le caratteristiche dello stereotipo che viene assegnato ad un \texttt{ClassDiagramElement} come i meta-attributi e meta-metodi, i quali sono essere ridefiniti dalla classe o interfaccia implementata tramite \proj{}. 
@@ -322,12 +316,6 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::activity::ActivityDiagramElement}}
 \label{\nogloxy{swedesigner::client::model::celltypes::activity::ActivityDiagramElement}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/activitydiagramelement.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::activity::ActivityDiagramElement}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è la base di tutte le classi che rappresentano i blocchi del diagramma delle attività.
@@ -480,12 +468,6 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::activity::HxVariable}}
 \label{\nogloxy{swedesigner::client::model::celltypes::activity::HxVariable}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxassignment.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::activity::HxVariable}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta il blocco di assegnazione o inizializzazione di una variabile o di chiamata di un metodo del diagramma delle attività.
@@ -536,12 +518,6 @@ Questo package contiene la definizione del modello degli elementi specifi del di
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramElement}}
 \label{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramElement}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/classdiagramelement.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramElement}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è la base di tutte le classi che rappresentano gli elementi del diagramma delle classi.
@@ -595,12 +571,6 @@ questa classe rappresenta le caratteristiche dello stereotipo che viene assegnat
 
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramLink}}
 \label{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramLink}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/classdiagramlink.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::class::ClassDiagramLink}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe è la base di tutte le classi che rappresentano le relazioni tra gli elementi del diagramma delle classi.
@@ -743,12 +713,6 @@ la classe \texttt{NewCellFactory} ritorna un'istanza di questa classe ogni volta
 
 \subsubsubsection{\nogloxy{swedesigner::client::model::celltypes::class::HxComment}}
 \label{\nogloxy{swedesigner::client::model::celltypes::class::HxComment}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/hxannotation.png}}
-\caption{\nogloxy{swedesigner::client::model::celltypes::class::HxComment}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe rappresenta la cella di commento del diagramma delle classi UML. Eredita da un tipo base di jointjs.
@@ -895,6 +859,12 @@ questa classe rappresenta le caratteristiche dello stereotipo che viene assegnat
 \subsection{\nogloxy{swedesigner::client::view}}
 \label{\nogloxy{swedesigner::client::view}}
 \subsubsection{Informazioni generali}
+\begin{figure}[h]
+\centering
+\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/view_pkg.png}}
+\caption{\nogloxy{swedesigner::client::view}}
+\end{figure}
+\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 Questo package raccoglie le classi che rappresentano i menù laterali e il \texttt{canvas} visualizzati dal browser, che popolano template e si sottoscrivono alla view tramite un pattern Observer. (I template non sono contenuti in questo package.)
@@ -903,12 +873,6 @@ Questo package raccoglie le classi che rappresentano i menù laterali e il \text
 \subsubsection{Classi}
 \subsubsubsection{\nogloxy{swedesigner::client::view::AppView}}
 \label{\nogloxy{swedesigner::client::view::AppView}}
-\begin{figure}[h]
-\centering
-\nogloxy{\includegraphics[scale=0.4,keepaspectratio]{img/client/appview.png}}
-\caption{\nogloxy{swedesigner::client::view::AppView}}
-\end{figure}
-\FloatBarrier
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe si occupa di gestire l'intera view dell'applicazione, componendo l'interfaccia principale e richiamando le altre view tramite il sistema a template di \backbonejs{}.
